--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,22 @@ html, body {
   padding: 0;
 }
 
-.canvas-container {
-  height: 100%;
-  width: 100%;
-  margin: 0 20px;
-  background: black;
-  border: 1px solid red;
-}
 
 .game {
+  margin-top:10px;
   text-align: center;
   display: flex;
-  flex-direction: column;
+  justify-content:center;
   height: 100%;
   width: 100%;
+}
+
+
+.canvas-container {
+  
+  height: 800px;
+  width: 600px;
+  margin: 0px;
+  background: black;
+  border: 1px solid red;
 }
